# oas/openapi.yaml
@@ -176,6 +176,12 @@ components:
             - info
             - warn
             - error
+        delaySeconds:
+          type: integer
+          example: "1"
+        clientId:
+          type: string
+          example: "1234567890"
     timings:
       description: Log timings
       type: object
