# src/Models/Message.cs
@@ -1,4 +1,5 @@
 #pragma warning disable CA1834 // Consider using 'StringBuilder.Append(char)' when applicable
+#pragma warning disable CA1307 // Specify StringComparison
 // ReSharper disable RedundantUsingDirective
 // ReSharper disable CheckNamespace
 #nullable disable
@@ -11,7 +12,13 @@
  * Contact: myemail@bogus.com
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
+using System;
+using System.Linq;
+using System.IO;
 using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
 using System.ComponentModel.DataAnnotations;
 using System.Runtime.Serialization;
 using System.Text.Json;
@@ -29,7 +36,7 @@ namespace IOptionTest.Models
         /// </summary>
         [Required]
 
-        [DataMember(Name = "message")]
+        [DataMember(Name="message")]
         public string _Message { get; set; }
 
         /// <summary>
@@ -37,8 +44,22 @@ namespace IOptionTest.Models
         /// </summary>
         [Required]
 
-        [DataMember(Name = "level")]
+        [DataMember(Name="level")]
         public LogLevel Level { get; set; }
+
+        /// <summary>
+        /// Gets or Sets DelaySeconds
+        /// </summary>
+
+        [DataMember(Name="delaySeconds")]
+        public int DelaySeconds { get; set; }
+
+        /// <summary>
+        /// Gets or Sets ClientId
+        /// </summary>
+
+        [DataMember(Name="clientId")]
+        public string ClientId { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
@@ -50,6 +71,8 @@ namespace IOptionTest.Models
             sb.Append("class Message {\n");
             sb.Append("  _Message: ").Append(_Message).Append("\n");
             sb.Append("  Level: ").Append(Level).Append("\n");
+            sb.Append("  DelaySeconds: ").Append(DelaySeconds).Append("\n");
+            sb.Append("  ClientId: ").Append(ClientId).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -94,6 +117,16 @@ namespace IOptionTest.Models
                 (
                     Level == other.Level ||
                    Level.Equals(other.Level)
+                ) &&
+                (
+                    DelaySeconds == other.DelaySeconds ||
+                    DelaySeconds != null &&
+                    DelaySeconds.Equals(other.DelaySeconds)
+                ) &&
+                (
+                    ClientId == other.ClientId ||
+                    ClientId != null &&
+                    ClientId.Equals(other.ClientId)
                 );
         }
 
@@ -111,6 +144,10 @@ namespace IOptionTest.Models
                     hashCode = hashCode * 59 + _Message.GetHashCode();
 
                 hashCode = hashCode * 59 + Level.GetHashCode();
+                    if (DelaySeconds != null)
+                    hashCode = hashCode * 59 + DelaySeconds.GetHashCode();
+                    if (ClientId != null)
+                    hashCode = hashCode * 59 + ClientId.GetHashCode();
                 return hashCode;
             }
         }
@@ -134,3 +171,4 @@ namespace IOptionTest.Models
 }
 
 #pragma warning restore CA1834 // Consider using 'StringBuilder.Append(char)' when applicable
+#pragma warning disable CA1307 // Specify StringComparison
